--- a/saite/index.html
+++ b/saite/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html land="en">
+<html lang="en">
 <head>
 <title>Выбирете раздел</title>
-<script src="js/main.js">
-</script>
-<meta charset="utf-8">
-<link href="css/mainstile.css"rel="stilesheet">
+   <script src="js/main.js">
+   </script>
+     <meta charset="utf-8">
+     <link href="css/mainstyle.css" rel="stylesheet">
 </head>
 <body>
-<div class=".head-block">
+   <div class="head-block">
 </div>
+   <div class="left-block">
+   </div>
+   <div class="right-block">
+   </div>
 </body>
 </html>
