--- a/saite/index.html
+++ b/saite/index.html
@@ -14,5 +14,9 @@
    </div>
    <div class="right-block">
    </div>
+   <div class="center-block">
+   </div>
+   <div class="bottom-block">
+   </div>
 </body>
 </html>
